--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="item">
-            <img src="img/aruba3.jpg" class="intro-img">
+            <img src="img/bru.jpg" class="intro-img">
           </div>
           <div class="item active">
-            <img src="img/aruba1.jpg" class="intro-img">
+            <img src="img/bus.jpg" class="intro-img">
           </div>
           <div class="item">
-            <img src="img/aruba2.jpg" class="intro-img">
+            <img src="img/bruh.jpg" class="intro-img">
           </div>
         </div>
       </div>
@@ -65,6 +65,14 @@
       </a>
     </div>
     <!-- End carousel -->
+
+    <div class="jumbotron">
+    <h1>Welcome to my site</h1>
+    <p>In this webpage you will find any related information to me<p>
+    </div>
+
+
+
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
