--- a/index.html
+++ b/index.html
@@ -65,11 +65,39 @@
       </a>
     </div>
     <!-- End carousel -->
-
     <div class="jumbotron">
     <h1>Welcome to my site</h1>
     <p>In this webpage you will find any related information to me<p>
     </div>
+<hr>
+
+
+    <!-- Start rows -->
+    <div class="container bro">
+      <div class="row">
+        <div class="col-sm-4">
+          <b class="glyphicon glyphicon-info-sign"></b>
+          <h2>About me</h2>
+          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+        <div class="col-sm-4">
+          <b class="glyphicon glyphicon-briefcase"></b>
+          <h2>Work Experience</h2>
+          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+       </div>
+        <div class="col-sm-4">
+          <b class="glyphicon glyphicon-phone"></b>
+          <h2>Development Skills</h2>
+          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+      </div>
+
+
+
+
+
+
+    <!-- End rows -->
 
 
 
