add css styling and finisnhg touches

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <a class="navbar-brand text-muted" href="#">Andres Garcia</a>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="file:///Users/Guest/Desktop/project/index.html">Home</a></li>
             <li><a href="#">Information</a></li>
             <li class="dropdown">
               <a data-toggle="dropdown" data-target="#">My Work<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Video Library</a></li>
-                <li><a href="#">Learning Adventures</a></li>
+              <ol class="dropdown-menu">
+                <li><a href="https://github.com/andresgr96/vacation">Vacation Website</a></li>
+                <li><a href="https://github.com/andresgr96/wikipedia">Wikipedia Website</a></li>
+                <li><a href="https://github.com/andresgr96/blog">Blog Website</a></li>
                 <li class="divider"></li>
-                <li><a href="#">Plans &amp; Pricing</a></li>
-              </ul>
+                <li><a href="https://github.com/andresgr96">GitHub</a></li>
+              </ol>
             </li>
           </ul>
         </div>
@@ -67,7 +67,7 @@
     <!-- End carousel -->
     <div class="jumbotron">
     <h1>Welcome to my site</h1>
-    <p>In this webpage you will find any related information to me<p>
+    <p>In this webpage you will find any information related to me<p>
     </div>
 <hr>
 
@@ -78,26 +78,28 @@
         <div class="col-sm-4">
           <b class="glyphicon glyphicon-info-sign"></b>
           <h2>About me</h2>
-          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p class="info">I was borned in Venezuela, in the year 1996. I moved to several cities inside my home country until at age 6 I settled in Maracaibo. I studied in Liceo Los Robles trough high school in wich I graduated 10th in my class. I then moved to Colombia seeking quality education, where i got into Los Andes  college wich is ranked 8th in south-america.</p>
         </div>
         <div class="col-sm-4">
           <b class="glyphicon glyphicon-briefcase"></b>
           <h2>Work Experience</h2>
-          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <em>aliqua</em>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla <strong>pariatur</strong>.</p>
        </div>
         <div class="col-sm-4">
           <b class="glyphicon glyphicon-phone"></b>
           <h2>Development Skills</h2>
-          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <em>aliqua</em>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla <strong>pariatur</sstrong>.</p>
         </div>
       </div>
-
-
-
-
-
-
     <!-- End rows -->
+    <div class"yobro" style="width:100%;">
+    <footer>
+
+      <h1 class="bruhh">&copy;Copyright Andres Garcia</h1>
+
+  </footer>
+   </div>
+
 
 
 
