Add Navbar and perfect indentation

--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand text-muted" href="#">Andres Garcia</a>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="file:///Users/Guest/Desktop/project/index.html">Home</a></li>
-            <li><a href="#">Information</a></li>
-            <li class="dropdown">
-              <a data-toggle="dropdown" data-target="#">My Work<b class="caret"></b></a>
-              <ol class="dropdown-menu">
-                <li><a href="https://github.com/andresgr96/vacation">Vacation Website</a></li>
-                <li><a href="https://github.com/andresgr96/wikipedia">Wikipedia Website</a></li>
-                <li><a href="https://github.com/andresgr96/blog">Blog Website</a></li>
-                <li class="divider"></li>
-                <li><a href="https://github.com/andresgr96">GitHub</a></li>
-              </ol>
-            </li>
-          </ul>
-        </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="file:///Users/Guest/Desktop/project/index.html">Home</a></li>
+          <li><a href="#">Information</a></li>
+          <li class="dropdown">
+            <a data-toggle="dropdown" data-target="#">My Work<b class="caret"></b></a>
+            <ol class="dropdown-menu">
+              <li><a href="https://github.com/andresgr96/vacation">Vacation Website</a></li>
+              <li><a href="https://github.com/andresgr96/wikipedia">Wikipedia Website</a></li>
+              <li><a href="https://github.com/andresgr96/blog">Blog Website</a></li>
+              <li class="divider"></li>
+              <li><a href="https://github.com/andresgr96">GitHub</a></li>
+            </ol>
+          </li>
+        </ul>
       </div>
-    </div><!-- End navbar -->
+    </div>
+  </div><!-- End navbar -->
 
     <!-- Carousel -->
     <div id="myCarousel" class="carousel slide">
-      <div >
+      <div>
         <ol class="carousel-indicators">
           <li class="active" data-target="#myCarousel" data-slide-to="0"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -66,10 +66,10 @@
     </div>
     <!-- End carousel -->
     <div class="jumbotron">
-    <h1>Welcome to my site</h1>
-    <p>In this webpage you will find any information related to me<p>
+      <h1>Welcome to my site</h1>
+      <p>In this webpage you will find any information related to me<p>
     </div>
-<hr>
+  <hr>
 
 
     <!-- Start rows -->
@@ -91,20 +91,13 @@
           <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <em>aliqua</em>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla <strong>pariatur</sstrong>.</p>
         </div>
       </div>
-    <!-- End rows -->
-    <div class"yobro" style="width:100%;">
-    <footer>
-
-      <h1 class="bruhh">&copy;Copyright Andres Garcia</h1>
-
-  </footer>
-   </div>
-
-
-
-
-
-
+      <!-- End rows -->
+      <!-- <div class"yobro" style="width:100%;"> -->
+      <footer class="navbar-fixed-bottom">
+        <h1 class="bruhh">&copy;Copyright Andres Garcia</h1>
+      </footer>
+    <!-- </div> -->
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
